--- a/airtrafic.ipynb
+++ b/airtrafic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "d3391c64",
    "metadata": {},
    "outputs": [
@@ -10,33 +10,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in ./.venv/lib64/python3.13/site-packages (2.3.3)\n",
-      "Requirement already satisfied: numpy in ./.venv/lib64/python3.13/site-packages (2.3.5)\n",
-      "Requirement already satisfied: matplotlib in ./.venv/lib64/python3.13/site-packages (3.10.7)\n",
-      "Requirement already satisfied: networkx in ./.venv/lib64/python3.13/site-packages (3.6.1)\n",
-      "Requirement already satisfied: eurostat in ./.venv/lib64/python3.13/site-packages (1.1.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in ./.venv/lib64/python3.13/site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in ./.venv/lib64/python3.13/site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in ./.venv/lib64/python3.13/site-packages (from pandas) (2025.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in ./.venv/lib64/python3.13/site-packages (from matplotlib) (1.3.3)\n",
-      "Requirement already satisfied: cycler>=0.10 in ./.venv/lib64/python3.13/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in ./.venv/lib64/python3.13/site-packages (from matplotlib) (4.61.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in ./.venv/lib64/python3.13/site-packages (from matplotlib) (1.4.9)\n",
-      "Requirement already satisfied: packaging>=20.0 in ./.venv/lib64/python3.13/site-packages (from matplotlib) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in ./.venv/lib64/python3.13/site-packages (from matplotlib) (12.0.0)\n",
-      "Requirement already satisfied: pyparsing>=3 in ./.venv/lib64/python3.13/site-packages (from matplotlib) (3.2.5)\n",
-      "Requirement already satisfied: requests in ./.venv/lib64/python3.13/site-packages (from eurostat) (2.32.5)\n",
-      "Requirement already satisfied: six>=1.5 in ./.venv/lib64/python3.13/site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in ./.venv/lib64/python3.13/site-packages (from requests->eurostat) (3.4.4)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in ./.venv/lib64/python3.13/site-packages (from requests->eurostat) (3.11)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in ./.venv/lib64/python3.13/site-packages (from requests->eurostat) (2.6.1)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in ./.venv/lib64/python3.13/site-packages (from requests->eurostat) (2025.11.12)\n",
+      "Requirement already satisfied: asttokens==3.0.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 1)) (3.0.1)\n",
+      "Requirement already satisfied: certifi==2025.11.12 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 2)) (2025.11.12)\n",
+      "Requirement already satisfied: charset-normalizer==3.4.4 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 3)) (3.4.4)\n",
+      "Requirement already satisfied: comm==0.2.3 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 4)) (0.2.3)\n",
+      "Requirement already satisfied: contourpy==1.3.3 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 5)) (1.3.3)\n",
+      "Requirement already satisfied: cycler==0.12.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 6)) (0.12.1)\n",
+      "Requirement already satisfied: debugpy==1.8.17 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 7)) (1.8.17)\n",
+      "Requirement already satisfied: decorator==5.2.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 8)) (5.2.1)\n",
+      "Requirement already satisfied: eurostat==1.1.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 9)) (1.1.1)\n",
+      "Requirement already satisfied: executing==2.2.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 10)) (2.2.1)\n",
+      "Requirement already satisfied: fonttools==4.61.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 11)) (4.61.0)\n",
+      "Requirement already satisfied: idna==3.11 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 12)) (3.11)\n",
+      "Requirement already satisfied: ipykernel==7.1.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 13)) (7.1.0)\n",
+      "Requirement already satisfied: ipython==9.8.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 14)) (9.8.0)\n",
+      "Requirement already satisfied: ipython_pygments_lexers==1.1.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 15)) (1.1.1)\n",
+      "Requirement already satisfied: jedi==0.19.2 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 16)) (0.19.2)\n",
+      "Requirement already satisfied: jupyter_client==8.7.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 17)) (8.7.0)\n",
+      "Requirement already satisfied: jupyter_core==5.9.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 18)) (5.9.1)\n",
+      "Requirement already satisfied: kiwisolver==1.4.9 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 19)) (1.4.9)\n",
+      "Requirement already satisfied: matplotlib==3.10.7 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 20)) (3.10.7)\n",
+      "Requirement already satisfied: matplotlib-inline==0.2.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 21)) (0.2.1)\n",
+      "Requirement already satisfied: nest-asyncio==1.6.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 22)) (1.6.0)\n",
+      "Requirement already satisfied: networkx==3.6.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 23)) (3.6.1)\n",
+      "Requirement already satisfied: numpy==2.3.5 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 24)) (2.3.5)\n",
+      "Requirement already satisfied: packaging==25.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 25)) (25.0)\n",
+      "Requirement already satisfied: pandas==2.3.3 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 26)) (2.3.3)\n",
+      "Requirement already satisfied: parso==0.8.5 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 27)) (0.8.5)\n",
+      "Requirement already satisfied: pexpect==4.9.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 28)) (4.9.0)\n",
+      "Requirement already satisfied: pillow==12.0.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 29)) (12.0.0)\n",
+      "Requirement already satisfied: platformdirs==4.5.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 30)) (4.5.1)\n",
+      "Requirement already satisfied: prompt_toolkit==3.0.52 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 31)) (3.0.52)\n",
+      "Requirement already satisfied: psutil==7.1.3 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 32)) (7.1.3)\n",
+      "Requirement already satisfied: ptyprocess==0.7.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 33)) (0.7.0)\n",
+      "Requirement already satisfied: pure_eval==0.2.3 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 34)) (0.2.3)\n",
+      "Requirement already satisfied: Pygments==2.19.2 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 35)) (2.19.2)\n",
+      "Requirement already satisfied: pyparsing==3.2.5 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 36)) (3.2.5)\n",
+      "Requirement already satisfied: python-dateutil==2.9.0.post0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 37)) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz==2025.2 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 38)) (2025.2)\n",
+      "Requirement already satisfied: pyzmq==27.1.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 39)) (27.1.0)\n",
+      "Requirement already satisfied: requests==2.32.5 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 40)) (2.32.5)\n",
+      "Requirement already satisfied: six==1.17.0 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 41)) (1.17.0)\n",
+      "Requirement already satisfied: stack-data==0.6.3 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 42)) (0.6.3)\n",
+      "Requirement already satisfied: tornado==6.5.2 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 43)) (6.5.2)\n",
+      "Requirement already satisfied: traitlets==5.14.3 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 44)) (5.14.3)\n",
+      "Requirement already satisfied: tzdata==2025.2 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 45)) (2025.2)\n",
+      "Requirement already satisfied: urllib3==2.6.1 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 46)) (2.6.1)\n",
+      "Requirement already satisfied: wcwidth==0.2.14 in ./.venv/lib64/python3.13/site-packages (from -r requirements.txt (line 47)) (0.2.14)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install pandas numpy matplotlib networkx eurostat"
+    "%pip install -r requirements.txt"
    ]
   },
   {
